# guardian

./: .gitignore  Cargo.toml  README.md  TODO.md
artwork/models/ship/: dish.blend  ico.blend  interceptor.blend  rover.blend  saucer.blend  ship.blend  tank.blend  tetra.blend  turret.blend
artwork/models/splash/: logo.blend
assets/models/: dish.glb  rover.glb  saucer.glb  ship.glb  tank.glb
src/: explosion.rs  game_state.rs  laser.rs  main.rs  mountains.rs  saucer.rs  ship.rs  stars.rs  treasure.rs
src/assets/shaders/: laser.wgsl  mountains.wgsl
