[package]
name = "guardian"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "jpeg"] }
rand = { version = "0.9.1", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
