[package]
name = "guardian"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = { version = "0.3.0", default-features = false, features = [
  "2d",
  "f32",
  "parry-f32",
  "debug-plugin",
] }
bevy = { version = "0.16.1", features = ["dynamic_linking", "jpeg"] }
bevy_enhanced_input = "0.12.0"
rand = { version = "0.9.1", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
